Update on Overleaf.

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -46,7 +46,7 @@
 \maketitle
 
 \abstract{Abstract}
-Humans are able to adapt motor commands to changing dynamics of the environment and of the body itself. While we must adapt to slow changes in our body dynamics, e.g. because of muscle exhaustion throughout the day, we can also adapt to sudden changes in the environment. For example, when picking up a heavy objects, we must adapt our motor commands to be able to move the object around. The size and material of an object provide us with contextual information which we can use to prepare the correct response to moving the object, and our ability to switch between clear contexts (e.g. between lifting a big rock and small piece of paper) has been well studied. However, contextual information is not always clear or realiable (e.g. a big object of unknown material). In this work, we focus on the behavioral phenomena effected by imperfect contextual information and present a hierarchical computational model for motor adaptation based on exact Bayesian inference, which explicitly takes into account contextual information and how the dynamics of context inference affect learning and action selection. We show how our model explains the effects of sensory cues and propriosceptive information on switching between tasks, the effects of environmental volatility and predictability on learning, and the effects of previously-learned adaptations on switching between tasks, in addition to the well studied savings, de-adaptation and spontaneous recovery.
+Humans are able to adapt motor commands to changing dynamics of the environment and of the body itself. While we must adapt to slow changes in our body dynamics, e.g. because of muscle exhaustion throughout the day, we can also adapt to sudden changes in the environment. For example, when picking up a heavy objects, we must adapt our motor commands to be able to move the object around. The size and material of an object provide us with contextual information which we can use to prepare the correct response to moving the object, and our ability to switch between clear contexts (e.g. between lifting a big rock and small piece of paper) has been well studied. However, contextual information is not always clear or reliable (e.g. a big object of unknown material). In this work, we focus on the behavioral phenomena effected by imperfect contextual information and present a hierarchical computational model for motor adaptation based on exact Bayesian inference, which explicitly takes into account contextual information and how the dynamics of context inference affect learning and action selection. We show how our model explains the effects of sensory cues and proprioceptive information on switching between tasks, the effects of environmental volatility and predictability on learning, and the effects of previously-learned adaptations on switching between tasks, in addition to the well studied savings, de-adaptation and spontaneous recovery.
 
 \section{Introduction}
 It has been long known that humans are capable of learning multiple novel motor tasks at the same time, even when these tasks oppose each other \citep[e.g.][]{Gandolfo_Motor_1996,Shadmehr_Functional_1997}, although interference can occur between tasks \citep[e.g.][]{Brashers-Krug_Consolidation_1996,Sing_Reduction_2010}. Additionally, humans have been shown to dynamically switch between different learned tasks. What prompts these switches is still a matter of research.
@@ -181,14 +181,14 @@ As with learning, our model selects actions (motor commands) based on context in
 
 Experimental evidence supporting this view can be found in experiments with context switching. For example, \cite{Davidson_Scaling_2004} reported an experiment in which participants had to switch from 3A to A in one group, with a block sequence A-3A-A-3A, and from -A to A in another group, with a block sequence A-(-A)-A-(-A). After A and 3A (or -A in the other group) had been learned in the first two blocks, the authors found that the switch from 3A to A was faster than that from -A to A. The authors interpreted this as evidence that switching between adaptations happens more quickly if it is in the same direction as the current adaptation (e.g. both counter-clockwise), and more slowly if they are in the opposite direction (e.g. clockwise to counter-clockwise).
 
-Our model offers a different explanation for the observed results: the assymetry is due to the existance of the baseline context. As discussed above, action selection in our model is done via a weighted avarage (see \eref{eq:action-selection}). In experiments without cued contexts, the baseline model $m_O$ has a non-zero probability $p(m | s_t ...)$. When a new block of trials starts (e.g. in the transition from 3A to A), a switch is inferred by the model (given feedback after the first trial) and $m_O$ becomes more likely (given that $m_{3A}$ has been ruled out. Therefore, in these first trials, action selection has a component guided by the baseline model, in which no extra compensatory force is applied, effectively ``pulling'' adaptation towards zero (no compensatory force). In the first group, this initial pull towards zero accelerates the transition towards A because $3A > A > 0$, but on the second group, it slows down the switch because $A > 0 > -A$.
+Our model offers a different explanation for the observed results: the asymmetry is due to the existence of the baseline context. As discussed above, action selection in our model is done via a weighted average (see \eref{eq:action-selection}). In experiments without cued contexts, the baseline model $m_O$ has a non-zero probability $p(m | s_t ...)$. When a new block of trials starts (e.g. in the transition from 3A to A), a switch is inferred by the model (given feedback after the first trial) and $m_O$ becomes more likely (given that $m_{3A}$ has been ruled out. Therefore, in these first trials, action selection has a component guided by the baseline model, in which no extra compensatory force is applied, effectively ``pulling'' adaptation towards zero (no compensatory force). In the first group, this initial pull towards zero accelerates the transition towards A because $3A > A > 0$, but on the second group, it slows down the switch because $A > 0 > -A$.
 
 We simulated data with our model fitting the experimental structure in \cite{Davidson_Scaling_2004}. We show the results in \fref{fig:davidson-2004}, alongside the experimental results from \cite{Davidson_Scaling_2004}. It can be seen that the agent exposed to the -8 context shifts back to 4 more slowly than the one exposed to +8, qualitatively reproducing the data from \cite{Davidson_Scaling_2004}, shown in \fref{fig:davidson-2004}B.
 
 \begin{figure}
 \centering
 \includegraphics{./figures/figure_4.png}
-\caption{Motor error when switching back to a previously learned adaptation. Following the block structure from \cite{Davidson_Scaling_2004}, the first 40 trials of the switch from +8 (yellow) or -8 (blue) to 4 is shown. (A) Simulations from our model, with the task parameters from \cite{Davidson_Scaling_2004}. On the y axis, the error is shown in arbitrary units, related to centimiters through a monotonically increasing transformation with the same origin. (B) Data adapted from \cite{Davidson_Scaling_2004}, showing the error in the same trials as (A).}
+\caption{Motor error when switching back to a previously learned adaptation. Following the block structure from \cite{Davidson_Scaling_2004}, the first 40 trials of the switch from +8 (yellow) or -8 (blue) to 4 is shown. (A) Simulations from our model, with the task parameters from \cite{Davidson_Scaling_2004}. On the y axis, the error is shown in arbitrary units, related to centimeters through a monotonically increasing transformation with the same origin. (B) Data adapted from \cite{Davidson_Scaling_2004}, showing the error in the same trials as (A).}
 \label{fig:davidson-2004}
 \end{figure}
 
@@ -243,11 +243,11 @@ The most direct secondary contextual information comes in the form of reward and
 
 The same rationale explains the results from \cite{Davidson_Scaling_2004}: motor learning, which in our model is gated by context inference, is minimal for errors close to 2 and -2 (see their figure 2E). This is because an error of 2 or -2 signals that the participant incorrectly identified the context (as adaptation has a magnitude of 1).
 
-A subtler source of information can be found in long pauses between blocks of adaptation trials. \cite{Ethier_Spontaneous_2008} performed an experiment where the adaptation blocks were divided into sub-blocks of 60 trials each, with a long 30s pause between sub-blocks. The authors observed that at the beginning of each sub-block, participants showed an average dip in their learned adaptation, suggesting that they were partially returning to baseline (O) after each pause. This can be explained by context inference, as a long pause could prompt participants to infer that a switch had occured. Because this was inferred without any information that points at the identity of the new context, prior beliefs take over. This means that participants rely on their belief of the underlying probability of observing any of the known contexts, which is dominated by the previously observed context A, but now includes a component of the baseline O, as it is the most common one in everyday life.
+A subtler source of information can be found in long pauses between blocks of adaptation trials. \cite{Ethier_Spontaneous_2008} performed an experiment where the adaptation blocks were divided into sub-blocks of 60 trials each, with a long 30s pause between sub-blocks. The authors observed that at the beginning of each sub-block, participants showed an average dip in their learned adaptation, suggesting that they were partially returning to baseline (O) after each pause. This can be explained by context inference, as a long pause could prompt participants to infer that a switch had occurred. Because this was inferred without any information that points at the identity of the new context, prior beliefs take over. This means that participants rely on their belief of the underlying probability of observing any of the known contexts, which is dominated by the previously observed context A, but now includes a component of the baseline O, as it is the most common one in everyday life.
 
-Error-clamp (E) trials present another insight. During E trials, error is artificially kept at zero. This takes different forms, depending on the type of experiment. If error is kept at zero, one could assume that participants would continue doing what they were doing before, as there is no reason (no observed error) to inferr a change in context. However, this is almost never the case \cite[e.g.][]{Smith_Interacting_2006,Ethier_Spontaneous_2008,Forano_Timescales_2020,Vaswani_Decay_2013,Scheidt_Persistence_2000,Pekny_Protection_2011}. Instead, participants slowly reduce their adaptation, often displaying spontaneous recovery \cite[e.g.][]{Smith_Interacting_2006}, i.e. an initial response in the direction of one of the learned adaptations. Our model provides a principled account of this behavior: while the observed error (i.e. the cursor on the screen) is kept at zero, participants still receive proprioceptive feedback which tells them that something has changed. The natural variability in a participant's behavior will lead her to expect observing errors, which clashes with the observed zero error. This prompts the participant to re-evaluate their inferred context, which can partially activate a previously-learned adaptation, as we showed in \fref{fig:vaswani-2013}. \cite{Pekny_Protection_2011} found similar results, demonstrating that the duration of the previously-observed adaptation block also affects behavior in the E block. Additionally, \cite{Criscimagna-Hemminger_Consolidation_2008} showed that introducing long periods before the E block begins lowers the initial force that participants exerted on the mechanical arm during the E block; longer periods of time make context inference revert to the prior expectation that a new baseline block begins, because participants are free to move their arm about during the pause.
+Error-clamp (E) trials present another insight. During E trials, error is artificially kept at zero. This takes different forms, depending on the type of experiment. If error is kept at zero, one could assume that participants would continue doing what they were doing before, as there is no reason (no observed error) to infer a change in context. However, this is almost never the case \cite[e.g.][]{Smith_Interacting_2006,Ethier_Spontaneous_2008,Forano_Timescales_2020,Vaswani_Decay_2013,Scheidt_Persistence_2000,Pekny_Protection_2011}. Instead, participants slowly reduce their adaptation, often displaying spontaneous recovery \cite[e.g.][]{Smith_Interacting_2006}, i.e. an initial response in the direction of one of the learned adaptations. Our model provides a principled account of this behavior: while the observed error (i.e. the cursor on the screen) is kept at zero, participants still receive proprioceptive feedback which tells them that something has changed. The natural variability in a participant's behavior will lead her to expect observing errors, which clashes with the observed zero error. This prompts the participant to re-evaluate their inferred context, which can partially activate a previously-learned adaptation, as we showed in \fref{fig:vaswani-2013}. \cite{Pekny_Protection_2011} found similar results, demonstrating that the duration of the previously-observed adaptation block also affects behavior in the E block. Additionally, \cite{Criscimagna-Hemminger_Consolidation_2008} showed that introducing long periods before the E block begins lowers the initial force that participants exerted on the mechanical arm during the E block; longer periods of time make context inference revert to the prior expectation that a new baseline block begins, because participants are free to move their arm about during the pause.
 
-In our account, if all information indicating a change in context is removed from the experiment, participants would continue to behave as they were in the previous block. Evidence for this can be seen in experiments 2 and 3 by \cite{Vaswani_Decay_2013}, where they showed random errors to participants during E trials, with a variance matching that of previously observed motor commands. The authors showed that by matching the errors expected by participants, they eliminated the slow tappering off observed in most E blocks. As we showed in \fref{fig:vaswani-2013}D, this effect need not be all or none: in some experimental sessions, participants might fail to notice that a change has occurred due to the stochasticity of their own actions. This would lead to an observed delay before a participant changes her behavior after the E block has started.
+In our account, if all information indicating a change in context is removed from the experiment, participants would continue to behave as they were in the previous block. Evidence for this can be seen in experiments 2 and 3 by \cite{Vaswani_Decay_2013}, where they showed random errors to participants during E trials, with a variance matching that of previously observed motor commands. The authors showed that by matching the errors expected by participants, they eliminated the slow tapering off observed in most E blocks. As we showed in \fref{fig:vaswani-2013}D, this effect need not be all or none: in some experimental sessions, participants might fail to notice that a change has occurred due to the stochasticity of their own actions. This would lead to an observed delay before a participant changes her behavior after the E block has started.
 
 
 \subsection{Model predictions and future work}
@@ -264,7 +264,7 @@ The volatility of the environment (i.e. unpredictable switching between contexts
 If this prediction is confirmed, our model would additionally suggest that human participants do not revisit the learned adaptation of the last trial when a new observation comes in. To see this, consider the following scenario from the experiments by \cite{Herzfeld_memory_2014}: at trial $t$, the real context was B but the participant inferred context A, issued a motor command consistent with context A and then observed the outcome at $t + 1$. When the outcome is observed, it becomes clear to the participant that the context was B. Does the participant update the internal model of A or of B? According to our model, the participant incorrectly updates A and, upon learning of her mistake at trial $t+1$, does not revert this update. If this were not the case, the volatility of the environment would have no effect, as the context at trial $t$ can almost always be identified at trial $t+1$.
 
 \subsubsection{Multi-source integration}
-The model also predicts an effect reminescent of multisensory integration: in order to integrate contextual information from conflicting sources (e.g. probabilistic visual cues and noisy endpoint feedback), the weight placed on a source increases with its precision (the inverse of its variance). Such integration would manifest itself in experiments in which observations are noisy, as in the experiments by \cite{Kording_Bayesian_2004}, in which the position of the finger was obscured and instead participants are shown a blurry cursor which was some times shifted from its real position. If the added observation noise gives evidence for a particular context (the real underlying context or another one) and a visual cue gave partial information for another context, the participants' behavior would be more consistent with the most reliable source of contextual information.
+The model also predicts an effect reminiscent of multisensory integration: in order to integrate contextual information from conflicting sources (e.g. probabilistic visual cues and noisy endpoint feedback), the weight placed on a source increases with its precision (the inverse of its variance). Such integration would manifest itself in experiments in which observations are noisy, as in the experiments by \cite{Kording_Bayesian_2004}, in which the position of the finger was obscured and instead participants are shown a blurry cursor which was some times shifted from its real position. If the added observation noise gives evidence for a particular context (the real underlying context or another one) and a visual cue gave partial information for another context, the participants' behavior would be more consistent with the most reliable source of contextual information.
 
 
 \section{Methods}
@@ -273,7 +273,7 @@ The model also predicts an effect reminescent of multisensory integration: in or
 We first describe the general principle behind the model, followed, in the next
 subsection, by the full mathematical description of each one of its components.
 
-Before proceding with the model description, let us introduce nomenclature:
+Before proceeding with the model description, let us introduce nomenclature:
 \begin{itemize}
 \item $t$: Time at the moment an observation is made, before inference is done.
 \item $\vartheta_t$: Observation. Note that this is assumed to be a noisy
@@ -445,7 +445,7 @@ p(\mu_\phi, \sigma_\phi) = NG(\mu_0, \nu_0, \alpha_0, \beta_0)
 where $\mu_{\phi}^0, \nu_{\phi}^0, \alpha_{\phi}^0$ and $\beta_{\phi}^0$ are free hyperparameters of the
 model.
 
-The update equations for the magnitud parameters are given by:
+The update equations for the magnitude parameters are given by:
 \begin{equation}
 q(\mu_f, \sigma_f | s_t, s_{t-1}, c_{t-1}) \propto p(s_t |
 s_{t-1}, c_{t-1}, \zeta_t)p(\mu_f, \sigma_f) \label{eqn:context-from-x}
@@ -477,14 +477,14 @@ Naturally, $\mu$ affects the initial estimate of the adaptation, in the same
 units as the necessary adaptation. $\nu$ encodes how stable this hyperprior is:
 higher values (e.g. 10000) all but guarantee that the hypermean will not move
 in the face of evidence; In principle, enough evidence should still move it,
-but that won't happen during an experiment. Smaller values (e.g. 1 / force\_sd,
+but that will not happen during an experiment. Smaller values (e.g. 1 / force\_sd,
 as is the default on the code) make the hypermean (and thus the mean) follow
 evidence more freely. Note that as more observations are accumulated, $\nu$
-becames bigger and bigger, solidifying the value of the hypermean.
+becomes bigger and bigger, solidifying the value of the hypermean.
 
 The hyperparameters $\alpha$ and $\beta$ have a more complex effect. Note that the
 mean of a Gamma distribution is $1 / (\alpha \nu)$; this mean is being used
-as the standard deviation of a Gaussian by the rest of the agent (cheating),
+as the standard deviation of a Gaussian by the rest of the agent,
 which makes it an important measure of uncertainty. While setting the default
 hyperparameters, the values used are $\alpha = 0.5 / \sigma_0$ and
 $\beta = 0.5$, where $\sigma_0$ is the \textit{a priori} estimate of the
@@ -493,7 +493,7 @@ code), which controls the initial learning rate. This makes the initial
 standard deviation equal $\sigma_0$, which makes it consistent with the
 fixed-force model in its interface. The 0.5 values ensure that uncertainty is
 large at the beginning and during the experiment is greatly reduced, but never
-to a point where it's ``visually'' too small. Changing this 0.5 would make the
+to a point where it is too small. Changing this 0.5 would make the
 standard deviation change more quickly, making the model more or less precise
 in its predictions, independently of the volatility of the mean of the
 adaptation (via the hypermean).
@@ -506,7 +506,7 @@ is 0.001 (compare that to the size of the adaptations, around 0.0125), and the
 hyperparameters of the standard deviation are stable during the experiment.
 
 
-\bibliography{../../MyLibrary}
+\bibliography{MyLibrary}
 
 
 \end{document}
