Update on Overleaf.

--- a/adaptation/article/article.tex
+++ b/adaptation/article/article.tex
@@ -506,7 +506,7 @@ is 0.001 (compare that to the size of the adaptations, around 0.0125), and the
 hyperparameters of the standard deviation are stable during the experiment.
 
 
-\bibliography{../../MyLibrary}
+\bibliography{MyLibrary}
 
 
 \end{document}
